feat: introduce new data models and enhance logging with structured log levels +small fixes in UI + bug fixes in comparison of events
