# src/main/resources/swagger/api.yml
@@ -395,11 +395,14 @@ components:
           type: string
           format: date-time
         level:
-          type: string
-          enum: [INFO, DEBUG, WARN, ERROR]
+          $ref: '#/components/schemas/LogLevel'
         message:
           type: string
       required:
         - timestamp
         - level
         - message
+
+    LogLevel:
+      type: string
+      enum: [INFO, DEBUG, WARN, ERROR]
